--- a/run_example/tSNE embedding visualisation.ipynb
+++ b/run_example/tSNE embedding visualisation.ipynb
@@ -19,6 +19,8 @@
     "import torch\n",
     "import os\n",
     "from openTSNE import TSNE\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "import plotly.express as px\n",
     "from hopwise.utils import init_seed"
    ]
@@ -36,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "checkpoint_name = 'TransE-Jan-22-2025_16-41-49.pth'"
+    "checkpoint_name = 'TransE-Jan-23-2025_16-48-43.pth'"
    ]
   },
   {
@@ -121,7 +123,7 @@
    "outputs": [],
    "source": [
     "user_weights = checkpoint['state_dict']['user_embedding.weight']\n",
-    "tsne_embeddings = tsne.fit(user_weights)"
+    "tsne_embeddings_users = tsne.fit(user_weights)"
    ]
   },
   {
@@ -130,7 +132,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_fn(tsne_embeddings, 'User')"
+    "plot_fn(tsne_embeddings_users, 'User')"
    ]
   },
   {
@@ -147,7 +149,7 @@
    "outputs": [],
    "source": [
     "entity_weights = checkpoint['state_dict']['entity_embedding.weight']\n",
-    "tsne_embeddings = tsne.fit(entity_weights)"
+    "tsne_embeddings_entities = tsne.fit(entity_weights)"
    ]
   },
   {
@@ -156,7 +158,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_fn(tsne_embeddings, 'Entity')"
+    "plot_fn(tsne_embeddings_entities, 'Entity')"
    ]
   },
   {
@@ -173,7 +175,7 @@
    "outputs": [],
    "source": [
     "relation_weights = checkpoint['state_dict']['relation_embedding.weight']\n",
-    "tsne_embeddings = tsne.fit(relation_weights)"
+    "tsne_embeddings_relations = tsne.fit(relation_weights)"
    ]
   },
   {
@@ -182,8 +184,75 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_fn(tsne_embeddings, 'Relation')"
+    "plot_fn(tsne_embeddings_relations, 'Relation')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Combine all the embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def combine_embeddings(**kwargs):\n",
+    "    embeddings_list = list()\n",
+    "    identifiers_list = list()\n",
+    "\n",
+    "    for embeddings_name, embeddings in kwargs.items():\n",
+    "        embeddings_list.append(embeddings)\n",
+    "        identifiers_list.extend([f'{embeddings_name} {id}' for id in range(embeddings.shape[0])])\n",
+    "        print(f\"[+] {embeddings_name}: {embeddings.shape}\")\n",
+    "\n",
+    "    embeddings_list = np.concatenate(embeddings_list, axis=0)\n",
+    "\n",
+    "    combined_df = pd.DataFrame({\n",
+    "        'x': embeddings_list[:, 0],\n",
+    "        'y': embeddings_list[:, 1],\n",
+    "        'type': [id.split(' ')[0] for id in identifiers_list],\n",
+    "        'identifier': identifiers_list\n",
+    "    })\n",
+    "\n",
+    "    fig = px.scatter(\n",
+    "        combined_df,\n",
+    "        x='x',\n",
+    "        y='y',\n",
+    "        color='type',\n",
+    "        hover_data=['identifier'],\n",
+    "        labels={\n",
+    "            'x': 'Embedding Dimension 1',\n",
+    "            'y': 'Embedding Dimension 2',\n",
+    "        },\n",
+    "        title=\"Visualising Combined Embeddings\",\n",
+    "        width=1024,\n",
+    "        height=1024,\n",
+    "        template='plotly_white'\n",
+    "    )\n",
+    "    fig.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "combine_embeddings(user=tsne_embeddings_users,\n",
+    "                   entity=tsne_embeddings_entities, \n",
+    "                   relation=tsne_embeddings_relations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -202,7 +271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
