added tsne functionality, added PGPR, fixed KGTrainer.evaluate, updated tsne notebooks, added a tutorial on how to preprocess embeddings to be used for other models and other fix.. (#150)

--- a/run_example/tSNE embedding visualisation.ipynb
+++ b/run_example/tSNE embedding visualisation.ipynb
@@ -39,6 +39,7 @@
    "outputs": [],
    "source": [
     "checkpoint_name = 'TransE-Jan-23-2025_16-48-43.pth'"
+    "checkpoint_name = 'TransE-Jan-23-2025_16-48-43.pth'"
    ]
   },
   {
@@ -124,6 +125,7 @@
    "source": [
     "user_weights = checkpoint['state_dict']['user_embedding.weight']\n",
     "tsne_embeddings_users = tsne.fit(user_weights)"
+    "tsne_embeddings_users = tsne.fit(user_weights)"
    ]
   },
   {
@@ -132,6 +134,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plot_fn(tsne_embeddings_users, 'User')"
     "plot_fn(tsne_embeddings_users, 'User')"
    ]
   },
@@ -150,6 +153,7 @@
    "source": [
     "entity_weights = checkpoint['state_dict']['entity_embedding.weight']\n",
     "tsne_embeddings_entities = tsne.fit(entity_weights)"
+    "tsne_embeddings_entities = tsne.fit(entity_weights)"
    ]
   },
   {
@@ -158,6 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plot_fn(tsne_embeddings_entities, 'Entity')"
     "plot_fn(tsne_embeddings_entities, 'Entity')"
    ]
   },
@@ -248,6 +253,13 @@
     "                   entity=tsne_embeddings_entities, \n",
     "                   relation=tsne_embeddings_relations)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -266,7 +278,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
