--- a/run_example/format_kg_aware_recsys_embs.ipynb
+++ b/run_example/format_kg_aware_recsys_embs.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,29 +41,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "checkpoint_name = 'saved/TransE-Mar-06-2025_16-07-00.pth'"
+    "checkpoint_name = 'saved/TransE-Mar-13-2025_16-18-32.pth'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_3497213/510420941.py:1: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
-      "  checkpoint = torch.load(checkpoint_name)\n",
-      "/home/asoccol/hopwise/.venv/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "checkpoint = torch.load(checkpoint_name)"
    ]
@@ -77,20 +66,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "odict_keys(['user_embedding.weight', 'entity_embedding.weight', 'relation_embedding.weight'])"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "checkpoint['state_dict'].keys()"
    ]
@@ -104,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,20 +98,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'ml-100k'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dataset_name = checkpoint['config']['dataset']\n",
     "dataset_name"
@@ -148,20 +115,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/home/asoccol/hopwise/hopwise/config/../dataset_example/ml-100k'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data_path = checkpoint['config']['data_path']\n",
     "data_path"
@@ -180,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,27 +145,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{0: '[PAD]', 1: 'film.producer.film', 2: 'film.film.actor', 3: 'film.film_genre.films_in_this_genre', 4: 'film.film.genre', 5: 'film.writer.film', 6: 'film.film.award_nomination', 7: 'film.film.directed_by', 8: 'film.cinematographer.film', 9: 'film.film.produced_by', 10: 'film.film.subjects', 11: 'film.content_rating.film', 12: 'film.production_company.films', 13: 'film.film.written_by', 14: 'film.film.country', 15: 'film.film.language', 16: 'film.film_subject.films', 17: 'film.film.rating', 18: 'film.film.production_companies', 19: 'film.film.award_won', 20: 'film.director.film', 21: 'film.film.cinematography', 22: 'film.film.sequel', 23: 'film.film.prequel', 24: 'film.actor.film', 25: '[UI-Relation]'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "dataset.field2token_id['tail_id']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# create the reverse mapping\n",
-    "eid2token = {id: token for token, id in dataset.field2token_id['head_id'].items()}\n",
+    "uid2token = {id: token for token,id in dataset.field2token_id['user_id'].items()}\n",
+    "print(uid2token)\n",
+    "eid2token = {id: token for token, id in dataset.field2token_id['tail_id'].items()}\n",
+    "print(eid2token)\n",
     "rid2token = {id: token for token, id in dataset.field2token_id['relation_id'].items()}\n",
     "print(rid2token)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # add dummy relation, check kge code\n",
+    "# rid2token[len(rid2token)] = 'ui_dummy_relation'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,8 +216,9 @@
     "        mapping = eid2token    \n",
     "    elif emb_type == 'relation':\n",
     "        mapping = rid2token\n",
-    "    else:\n",
-    "        mapping = None\n",
+    "    elif emb_type == 'user':\n",
+    "        mapping = uid2token\n",
+    "        \n",
     "    # Create index\n",
     "    new_emb_dict[columns[0]] = [mapping[id] if mapping is not None else id for id in range(1,len(weight))]\n",
     "\n",
@@ -262,22 +233,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[+] Formatting user_embedding.weight with columns ['userid:token', 'user_embedding:float_seq']\n",
-      "[+] Saving the new ml-100k userid:token embedding in /home/asoccol/hopwise/hopwise/config/../dataset_example/ml-100k/ml-100k.useremb!\n",
-      "[+] Formatting entity_embedding.weight with columns ['entityid:token', 'entity_embedding:float_seq']\n",
-      "[+] Saving the new ml-100k entityid:token embedding in /home/asoccol/hopwise/hopwise/config/../dataset_example/ml-100k/ml-100k.entityemb!\n",
-      "[+] Formatting relation_embedding.weight with columns ['relationid:token', 'relation_embedding:float_seq']\n",
-      "[+] Saving the new ml-100k relationid:token embedding in /home/asoccol/hopwise/hopwise/config/../dataset_example/ml-100k/ml-100k.relationemb!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for emb_name, emb in checkpoint['state_dict'].items():\n",
     "    if emb_name in excluded:\n",
@@ -306,27 +264,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['ml-100k.user',\n",
-       " 'ml-100k.relationemb',\n",
-       " 'ml-100k.item',\n",
-       " 'ml-100k.inter',\n",
-       " 'ml-100k.useremb',\n",
-       " 'ml-100k.link',\n",
-       " 'ml-100k.entityemb',\n",
-       " 'ml-100k.kg']"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "os.listdir(data_path)"
    ]
@@ -427,7 +367,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
